# AIdeaToProd

./: .gitignore  main.py  models.py  next_steps.txt  pyproject.toml
core/: crew_initializer.py
factories/: agents_factory.py  tasks_factory.py
mcps/: __init__.py
mcps/g_drive_mcp/: README.md  gdrive_client.py  server.py
mcps/google_drive_mcp/: google_drive_client.py  main.py  models.py  server.py
mcps/workflow_state_mcp/: README.md  main.py  server.py
mcps/workflow_state_mcp/tools/: file_utils.py
mcps/workflow_state_mcp/tools/analysis_and_planning/: file_tools.py  models.py
mcps/workflow_state_mcp/workflow_state/analysis_and_planning/: metadata.json  result.json
mcps/workflow_state_mcp/workflow_state/analysis_and_planning/artifacts/: DD.md  HLD.md
steps/: step.py
steps/analysis_and_planning/: models.py  planning_metadata_saver.py  planning_step.py
steps/analysis_and_planning/config/: __init__.py  mcp_servers_config.py  paths.py
steps/analysis_and_planning/crew/: crew_initializer.py  tools_manager.py
steps/analysis_and_planning/crew/factories/: __init__.py  agents_factory.py  tasks_factory.py
steps/analysis_and_planning/utils/: planning_metadata_saver.py
steps/repository_creation/: build_state.py  load_bundle.py  models.py
steps/repository_creation/config/: __init__.py  github_mcp_config.py
steps/repository_creation/nodes/: load_bundle.py
workflow_state/analysis_and_planning/: result.json
workflow_state/analysis_and_planning/artifacts/: HLD.md  code_structure.json
